<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddEditNoteActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti1"
                android:layout_width="match_parent"
                android:hint="@string/title"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/ti1"
                android:id="@+id/ti2"
                android:layout_width="match_parent"
                android:hint="@string/des"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_below="@id/ti2"
                android:text="@string/priority"
                android:id="@+id/prioryti"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:layout_below="@id/prioryti"
                android:id="@+id/number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/view_color"
                android:layout_width="200dp"
                android:layout_below="@id/prioryti"
                android:layout_marginStart="50dp"
                android:layout_toRightOf="@id/number_picker"
                app:cardCornerRadius="30dp"
                android:layout_height="200dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/text_example"
                        android:layout_centerHorizontal="true"
                        android:text="@string/examp_text"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.button.MaterialButton
                android:layout_below="@id/view_color"
                android:id="@+id/btn_change_bg_color"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                app:backgroundTint="@null"
                android:inputType="text"
                android:fontFamily="@font/avo"
                android:textStyle="bold"
                android:textColor="#4b4b4b"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_button"
                android:text="@string/add_bg_color" />
            <com.google.android.material.button.MaterialButton
                android:layout_below="@id/btn_change_bg_color"
                android:id="@+id/btn_change_text_color"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                app:backgroundTint="@null"
                android:inputType="text"
                android:textColor="#fff200"
                android:fontFamily="@font/avo"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_btn2"
                android:text="@string/add_text_color" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>